HR Fixes Horizontal Scrollbar (#149)
* holy

* Update style.less

--- a/src/components/PageLayout/style.less
+++ b/src/components/PageLayout/style.less
@@ -44,11 +44,11 @@
 }
 
 .content {
-  display: inline-block;
   padding: 5%;
   position: relative;
   vertical-align: top;
   width: 100%;
+  overflow: hidden;
 }
 
 .content-table {
